src/pages/DashboardPage/DashboardPage.module.scss
@use '../../styles/mixins';

.colorContainer {
  width: 100%;
  min-height: calc(100vh - 88px);
}

.container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.title {
  margin-top: 20px;
  margin-bottom: 20px;
  text-align: center;
  font-size: 32px;
  color: #ebd8ff;
}

.text {
  max-width: 480px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  text-align: center;
  font-size: 16px;
  color: #ebd8ff;
}

.link {
  margin-top: 40px;
  margin-left: auto;
  margin-right: auto;
  display: block;
  text-align: center;
  font-weight: 600;
  width: 196px;
  padding: 14px 28px;
  border-radius: 10px;
  background: #ebd8ff;
  color: #373737;
  box-shadow: 0px 3.4369285106658936px 3.4369285106658936px 0px rgba(0, 0, 0, 0.25);
  transition: background 200ms ease-in-out;

  &:hover {
    background-color: #5cd3a8;
  }
}

.img {
  display: block;
  margin-left: auto;
  margin-right: auto;

  @include mixins.mq('mobile-only') {
    width: 280px;
  }

  @include mixins.mq('mobile') {
    width: 360px;
  }

  @include mixins.mq('tablet') {
    width: 440px;
  }
}

